// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/register/register.test.ts should fail to register a user when email is invalid 1`] = `
Object {
  "errors": Array [
    "Invalid email in 'user.email'. Received 'undefined'",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/register/register.test.ts should fail to register a user when the password does not match password_confirmation 1`] = `
Object {
  "errors": Array [
    "Passwords must match in user",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/register/register.test.ts should fail to register a user with the same email address 1`] = `
Object {
  "message": "User already exists",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/register/register.test.ts should fail to register a user with too short password 1`] = `
Object {
  "errors": Array [
    "Required data in user.password must have at least 6 characters.",
    "Missing required value in 'user.password_confirmation'",
    "Passwords must match in user",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/register/register.test.ts should fail to register a user without input 1`] = `
Object {
  "errors": Array [
    "Missing required value in 'user.email'",
    "Missing required value in 'user.password'",
    "Missing required value in 'user.password_confirmation'",
    "Passwords must match in user",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/register/register.test.ts should fail to register a user without password 1`] = `
Object {
  "errors": Array [
    "Missing required value in 'user.password'",
    "Missing required value in 'user.password_confirmation'",
    "Passwords must match in user",
  ],
  "message": "Unprocessable entity",
}
`;
